# chat311

./: 311database.csv  README.md  docker-compose-dev.yml  pyproject.toml
.devcontainer/: devcontainer.json  initialize.sh
chat311/: agent_manager.py  ai_config.py  ai_functions.py  ask.py  browse.py  call_ai_function.py  chat.py  commands.py  config.py  json_parser.py  json_utils.py  llm_utils.py  logger.py  main.py  prompt.py
chat311/app/: __init__.py  app.py  run.py
chat311/memory/: __init__.py  base.py  chroma.py  local.py  no_memory.py
docker/: Dockerfile.chroma  Dockerfile.dev  entrypoint.sh  init.sql
